# compass

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README  README.ECLIPSE  apt-get-list.txt  cmake_clean.sh  cmake_install.cmake  cmake_uninstall.cmake  install-sail-gcc  result.clang
abductor/: Abductor.cpp  Abductor.h  CMakeLists.txt  CTestTestfile.cmake  CallingContext.cpp  CallingContext.h  ComputePO.cpp  ComputePO.h  ConstRenaming.cpp  ConstRenaming.h  LoopTree.cpp  LoopTree.h  Makefile  ModSet.cpp  ModSet.h  POE.cpp  POE.h  POEKey.cpp  POEKey.h  ProofObligation.cpp  ProofObligation.h  README.txt  Verify.cpp  Verify.h  cmake_install.cmake
compass/: .directory  CMakeLists.txt  CTestTestfile.cmake  GlobalAnalysisState.cpp  GlobalAnalysisState.h  Makefile  MemoryAnalysis.cpp  MemoryAnalysis.h  cmake_install.cmake  compass_assert.cpp  compass_assert.h  compass_ui_automoc.cpp.files
compass/access-path/: AccessPath.cpp  AccessPath.h  Address.cpp  Address.h  Alloc.cpp  Alloc.h  ArithmeticValue.cpp  ArithmeticValue.h  ArrayRef.cpp  ArrayRef.h  ConstantValue.h  Deref.cpp  DisplayTag.cpp  DisplayTag.h  FieldSelection.cpp  FieldSelection.h  FunctionValue.cpp  FunctionValue.h  IndexVariable.cpp  IterationCounter.h  Nil.cpp  Nil.h  StringLiteral.cpp  TypeConstant.cpp  Variable.cpp  Variable.h  access-path.h
compass/client-analysis/: TaintAnalysis.cpp  TaintAnalysis.h
compass/client-analysis-manager/: ClientAnalysis.cpp  ClientAnalysis.h  ClientAnalysisManager.cpp  ClientAnalysisManager.h
compass/error-diagnosis/: ReportClassifier.cpp  ReportClassifier.h  UserQuery.cpp  UserQuery.h
compass/error-traces/: AssertionTrace.cpp  AssertionTrace.h  BufferTrace.cpp  BufferTrace.h  CastErrorTrace.cpp  CastErrorTrace.h  DeletedAccessTrace.cpp  DeletedAccessTrace.h  DerefTrace.cpp  DerefTrace.h  DoubleDeleteTrace.cpp  DoubleDeleteTrace.h  ErrorTrace.cpp  ErrorTrace.h  MemoryLeakTrace.cpp  MemoryLeakTrace.h  ReadTrace.cpp  ReadTrace.h  error-traces.h
compass/java-runtime/: Compass.java
compass/manager/: Analysis.cpp  Analysis.h  AnalysisResult.cpp  AnalysisResult.h  Callgraph.cpp  Callgraph.h  DataManager.cpp  DataManager.h  GenericSummary.cpp  GenericSummary.h  Manager.cpp  Manager.h  Semaphore.cpp  Semaphore.h  Summary.cpp  Summary.h  SummaryFetcher.cpp  SummaryFetcher.h  SummaryRetriever.cpp  SummaryRetriever.h  SummaryStream.cpp  SummaryStream.h  allocator.cpp  allocator.h  serializable_types.h
compass/memory-graph/: ConstraintGenerator.cpp  ConstraintGenerator.h  DisjointVarManager.cpp  DisjointVarManager.h  Edge.cpp  Edge.h  EntryAliasManager.cpp  EntryAliasManager.h  Error.cpp  Error.h  IndexVarManager.cpp  IndexVarManager.h  Instantiator.cpp  Instantiator.h  InvariantChecker.cpp  InvariantChecker.h  InvariantEnforcer.cpp  InvariantEnforcer.h  MemoryGraph.cpp  MemoryGraph.h  MemoryLocation.cpp  MemoryLocation.h  Sentinels.cpp  Sentinels.h  Type.cpp  Type.h
compass/runtime/: compass-runtime.h  multimap.h  spec_adt.h  spec_list.h  spec_map.h  spec_queue.h  spec_set.h  spec_stack.h  spec_string.h  spec_vector.h
compass/summary/: BlockExecutionCounter.cpp  BlockExecutionCounter.h  LoopAbstractor.cpp  LoopAbstractor.h  LoopInvariantChecker.cpp  LoopInvariantChecker.h  SummaryClosure.cpp  SummaryClosure.h  SummaryGraph.cpp  SummaryGraph.h
compass/ui/: Compass.cpp  Compass.h  DottyViewer.cpp  DottyViewer.h  FileView.cpp  FileView.h  MemoryVisualizer.cpp  MemoryVisualizer.h  ProjectSettings.cpp  ProjectSettings.h  RegressionItem.cpp  RegressionItem.h  RegressionRunner.cpp  RegressionRunner.h  Regressions.cpp  Regressions.h  SailGenerator.cpp  SailGenerator.h  StatsViewer.cpp  StatsViewer.h  SummaryViewer.cpp  SummaryViewer.h  SvgViewer.cpp  SvgViewer.h  compass_ui.cpp  compass_ui.h  compass_ui.ui  main.cpp  ui_compass_ui.h
dex-parser/: ASMInstruction.cpp  ASMInstruction.h  CMakeLists.txt  CMakeLists.txt_bak  CTestTestfile.cmake  ClassDefInfo.cpp  ClassDefInfo.h  CodeHeader.cpp  CodeHeader.h  Constant.h  Data.cpp  Data.h  DataIn.cpp  DataIn.h  DebugInfo.cpp  DebugInfo.h  DebugInfoReader.cpp  DebugInfoReader.h  DexFileReader.cpp  DexFileReader.h  DexOpcode.h  DexToSail.cpp  DexToSail.h  Field.cpp  Field.h  Format.h  Graph.cpp  Graph.h  GraphUtil.cpp  GraphUtil.h  Handler.cpp  Handler.h  Ins2Debug.cpp  Ins2Debug.h  InsToDebug.h  InstructionMapping.cpp  InstructionMapping.h  InstructionProcess.cpp  InstructionProcess.h  Int2Str.cpp  (+25 more)
pointer-analysis/: AllocContextController.cpp  AllocContextController.h  ApTree.cpp  ApTree.h  AssertInstProcessing.cpp  AssertInstProcessing.h  Auxiliary.cpp  Auxiliary.h  CMakeLists.txt  CTestTestfile.cmake  CallManager.cpp  CallManager.h  CircleSummaryUnit.cpp  CircleSummaryUnit.h  InsMemAnalysis.cpp  InsMemAnalysis.h  Makefile  MtdInstsProcessor.cpp  MtdInstsProcessor.h  SideNode.cpp  SideNode.h  SummaryUnit.cpp  SummaryUnit.h  Type.cpp  Type.h  cmake_install.cmake  pointer-analysis-test.cpp
pointer-analysis/access-path/: AbstractDataStructure.cpp  AbstractDataStructure.h  AccessPath.cpp  AccessPath.h  Alloc.cpp  Alloc.h  ArithmeticValue.cpp  ArithmeticValue.h  ArrayRef.cpp  ConstantValue.cpp  ConstantValue.h  Deref.cpp  Deref.h  DisplayTag.cpp  DisplayTag.h  FieldSelection.cpp  FieldSelection.h  FunctionValue.cpp  FunctionValue.h  IndexVariable.h  IterationCounter.cpp  Nil.h  ProgramFunction.cpp  ProgramFunction.h  (+8 more)
sail/: .directory  CMakeLists.txt  CTestTestfile.cmake  FileIdentifier.cpp  FileIdentifier.h  Identifier.cpp  Identifier.h  Makefile  Serializable.cpp  Serializable.h  call_id.cpp  call_id.h  cmake_install.cmake  fileops.cpp  fileops.h  language.h  licence.txt  sail-serialization.h  sail.doxyfile  serial.h  serialization-archive.h  serialization-hooks.cpp  serialization-hooks.h  types.h
sail-test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  sail-test.cpp
serialization/: .directory  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compass-serialization.cpp  compass-serialization.h
util/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  util.cpp  util.h
(+2038 files in other folders)
